check_out_2.txt
    Checking shlex v1.3.0
    Checking crabby v0.2.6 (C:\Users\amesa\Desktop\crabby)
warning: unused import: `Result as NotifyResult`
   --> src\main.rs:318:54
    |
318 |                 use notify::{Watcher, RecursiveMode, Result as NotifyResult};
    |                                                      ^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `context` found for enum `std::option::Option<T>` in the current scope
   --> src\runner.rs:19:43
    |
 19 |     let parts = shlex::split(command_str).context("Failed to parse command string")?;
    |                                           ^^^^^^^
    |
   ::: C:\Users\amesa\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\anyhow-1.0.100\src\lib.rs:622:8
    |
622 |     fn context<C>(self, context: C) -> Result<T, Error>
    |        ------- the method is available for `std::option::Option<Vec<std::string::String>>` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Context` which provides `context` is implemented but not in scope; perhaps you want to import it
    |
  1 + use anyhow::Context;
    |
help: there is a method `with_context` with a similar name
    |
 19 |     let parts = shlex::split(command_str).with_context("Failed to parse command string")?;
    |                                           +++++

warning: unused import: `colored::Colorize`
 --> src\update.rs:2:5
  |
2 | use colored::Colorize;
  |     ^^^^^^^^^^^^^^^^^

warning: unused variable: `version`
  --> src\registry.rs:85:41
   |
85 | pub fn download_and_extract(name: &str, version: &str, tarball_url: &str) -> Result<()> {
   |                                         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_version`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable `pipes` is assigned to, but never used
   --> src\main.rs:323:25
    |
323 |                 let mut pipes = if let Some(c) = &mut child {
    |                         ^^^^^
    |
    = note: consider using `_pipes` instead

warning: value assigned to `pipes` is never read
   --> src\main.rs:378:37
    |
378 | ...                   pipes = Some(runner::pipe_output(c));
    |                       ^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `crabby` (bin "crabby") generated 5 warnings
error: could not compile `crabby` (bin "crabby") due to 1 previous error; 5 warnings emitted
